0025537: XmlMPrsStd_PositionDriver::Paste runtime check crash.

Increased a size of buffer in array of 'char' to fit the largest possible conversion from 'double' to %.17g string.