src/XmlMDataXtd/XmlMDataXtd_PositionDriver.cxx
@@ -122,7 +122,7 @@ void XmlMDataXtd_PositionDriver::Paste
   if (!aTPos.IsNull())
   {
     gp_Pnt aPos = aTPos->GetPosition();
-    char buf [64];
+    char buf [75]; // (24 + 1) * 3
     Sprintf (buf, "%.17g %.17g %.17g", aPos.X(), aPos.Y(), aPos.Z());
     XmlObjMgt::SetStringValue(theTarget.Element(), buf);
   }
